# pysimplelogger

./: .gitignore  LICENSE  Makefile  Pipfile  pyproject.toml  setup.py
pysimplelogger/: __init__.py  logger3.py
tests/: test_pysimplelogger.py
