[tool.poetry]
name = "pysimplelogger"
version = "0.1.4"
description = 'Simple Logger based on python logging'
repository = 'http://github.com/rickalm/pysimplelogger'
license = "MIT"
authors = [
  "Rick Alm <rickealm@gmail.com>"
  ]

[tool.poetry.dependencies]
python = "^3"
pyrandomtools = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^4.2"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
